# zkLlama

./: Cargo.toml  README.md  main_old.rs
elf/: riscv32im-succinct-zkvm-elf
lib/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: main.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
